public/css/style.css
/* ... */
#header.transparent-navbar .navbar-toggle {
  color: #fff;
}

#header.fixed-navbar .navbar-toggle {
  color: #0b0f28 !important;
}

/* Mobile nav */

@media only screen and (max-width: 991px) {
  .main-nav {
    margin: 0px -15px;
    max-height: 0;
    overflow-y: scroll;
    background-color: #fff;
    -webkit-transition: 0.3s all;
    transition: 0.3s all;
  }
  .main-nav.open {
    max-height: 500px;
  }
  .main-nav li.active a:after {
    display: none;
  }
  #header.transparent-navbar .main-nav li a {
    color: #0b0f28;
  }
  .main-nav li a:hover,
  .main-nav li a:focus,
  .main-nav li.active a {
    background-color: #bd0c0e;
    color: #fff !important;
  }
  .navbar-toggle {
    display: block;
    margin: 15px;
  }

  .navbar-brand {
    margin: 15px;
  }
}

/*=========================================================
	HOME
===========================================================*/

#home {
  height: 100vh;
  position: relative;
}

#home .home-wrapper {
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  margin-bottom: 5rem;
}

.home-content {
  width: 60vw;
  top: 50%;
  width: 65%;
  border-radius: 25px;
}

.home-content h1 {
  text-transform: capitalize;
  font-weight: 900;
  color: #fff;
}

.home-content h4 {
  color: #fff;
}

.home-content button {
  position: relative;
}

#page-wrapper {
  background-color: #f9f9fa;
}

.page-wrapper-content {
  text-align: center;
}

/*=========================================================
	ABOUT
===========================================================*/

#numbers {
  margin-top: 60px;
}

.number {
  margin-bottom: 30px;
}

.number h3 {
  font-size: 42px;
  margin-bottom: 0px;
  color: #bd0c0e;
}

.number p {
  text-transform: uppercase;
  color: #0b0f28;
}

.atlastmoment {
  font-size: 25px;
}

/*=========================================================
	GALERY
===========================================================*/

#galery-owl .owl-item .galery-item {
  opacity: 0.5;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
  -webkit-transform-origin: 100% 100%;
  -ms-transform-origin: 100% 100%;
  transform-origin: 100% 100%;
  -webkit-transition: 0.6s opacity, 0.6s -webkit-transform;
  transition: 0.6s opacity, 0.6s -webkit-transform;
  transition: 0.6s transform, 0.6s opacity;
  transition: 0.6s transform, 0.6s opacity, 0.6s -webkit-transform;
}

#galery-owl.owl-theme .owl-item.active + .owl-item .galery-item {
  -webkit-transform-origin: 0% 100%;
  -ms-transform-origin: 0% 100%;
  transform-origin: 0% 100%;
}

#galery-owl.owl-theme .owl-item.active .galery-item {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

/* #galery-owl.owl-theme .owl-item.active .galery-item img {
} */

#galery-owl.owl-theme .owl-nav {
  margin-top: 0px;
  display: none;
}

#galery-owl.owl-theme .owl-nav [class*='owl-'] {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  background: transparent;
  color: #bd0c0e;
  width: 90px;
  height: 90px;
  line-height: 90px;
  font-size: 40px;
  border-radius: 50%;
  padding: 0;
  margin: 0;
}

#galery-owl.owl-theme .owl-prev {
  left: 15px;
}

#galery-owl.owl-theme .owl-next {
  right: 15px;
}

/*=========================================================
	SPEAKERS
===========================================================*/

#speakers {
  background-color: #f9f9fa;
}

.speaker {
  position: relative;
  cursor: pointer;
  margin-bottom: 30px;
}

.speaker:after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  background-color: #000;
  opacity: 0;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.speaker:hover:after {
  opacity: 0.8;
}

.speaker .speaker-img > img {
  width: 100%;
}

.speaker .speaker-body {
  position: absolute;
  bottom: 60px;
  left: 0;
  right: 0;
}

.speaker .speaker-content {
  position: relative;
  padding: 30px;
  background: #bd0c0e;
  text-align: right;
  z-index: 20;
}

.speaker .speaker-content > h2 {
  color: #fff;
}

.speaker .speaker-content > span {
  color: #fff;
}

.speaker .speaker-social {
  position: absolute;
  top: 0;
  right: 0;
  -webkit-transform: translateY(0%);
  -ms-transform: translateY(0%);
  transform: translateY(0%);
  z-index: 5;
  -webkit-transition: 0.3s all;
  transition: 0.3s all;
}

.speaker .speaker-social > a {
  display: inline-block;
  width: 40px;
  height: 40px;
  line-height: 40px;
  text-align: center;
  color: #fff;
  background: #bd0c0e;
  z-index: 15;
  -webkit-transition: 0.3s opacity;
  transition: 0.3s opacity;
}

.speaker .speaker-social a + a {
  margin-left: -4px;
  border-left: 1px solid #f8f8ff33;
}

.speaker .speaker-social a:hover {
  opacity: 0.8;
}

.speaker:hover .speaker-social {
  -webkit-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

/*----------------------------*\
	Speaker Modal
\*----------------------------*/

.speaker-modal .modal-dialog {
  width: 100%;
  max-width: 970px;
  margin-top: 60px;
  margin-bottom: 60px;
}

.speaker-modal .modal-content {
  border: none;
  border-radius: 2px;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
}

.speaker-modal .speaker-modal-close {
  position: absolute;
  right: -15px;
  top: -15px;
  width: 60px;
  height: 60px;
  line-height: 60px;
  text-align: center;
  background-color: #bd0c0e !important;
  border-radius: 50%;
  padding: 0;
  color: #fff;
  border: none;
  font-size: 24px;
  z-index: 50;
}

.speaker-modal .speaker-modal-close:after {
  content: '\f00d';
  font-family: FontAwesome;
}

.speaker-modal .modal-body {
  padding: 30px;
}

.speaker-modal .speaker-modal-img > img {
  width: 100%;
}
/* ... */

